# cloister

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  SECURITY.md  flake.nix
.github/workflows/: ci.yml  update-flake-lock.yml
docs/: configuration.md  dbus.md  diagnostics.md  network-namespace.md  pipewire.md  security.md
examples/: chromium.nix  discord.nix  evince.nix  nixdev.nix  shell-custom-rc.nix  untrusted.nix
helpers/cloister-dbus-validate/: Cargo.toml  default.nix
helpers/cloister-netns/: Cargo.toml  default.nix
helpers/cloister-pipewire-validate/: Cargo.toml  default.nix
helpers/cloister-sandbox/: Cargo.toml  default.nix
helpers/cloister-sandbox/cloister-sandbox-bin/: Cargo.toml
helpers/cloister-sandbox/cloister-sandbox-bin/src/: main.rs
helpers/cloister-sandbox/cloister-sandbox-lib/: Cargo.toml
helpers/cloister-sandbox/cloister-sandbox-lib/src/: bwrap.rs  config.rs  env.rs  features.rs  lib.rs  runtime.rs  seccomp.rs  socket.rs  ssh_filter.rs  ssh_proto.rs  validate.rs  vars.rs  wayland.rs
helpers/cloister-seccomp-filter/: Cargo.toml  default.nix
helpers/cloister-seccomp-validate/: Cargo.toml  default.nix
helpers/cloister-wayland-validate/: Cargo.toml  default.nix
modules/cloister/: _assertions.nix  _bwrap.nix  _dangerous.nix  _json.nix  _mkShells.nix  _options.nix  _patterns.nix  _registry.nix  _resolve.nix  _sandbox.nix  _wrappers.nix  default.nix
modules/cloister-netns/: default.nix
tests/: bwrap.nix  default.nix  lib.nix  netns.nix  registry.nix  sandbox.nix  wrappers.nix
(+14 files in other folders)
