[package]
name = "cloister-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
cloister-sandbox-lib = { path = "../cloister-sandbox-lib" }
serde_json = "1"
sha2 = { version = "0.10", default-features = false, features = ["std"] }
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["fs"] }
