[package]
name = "cloister-sandbox-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# Wayland security context
wayrs-client = "1.1"
wayrs-protocols = { version = "0.14", features = ["security-context-v1"] }

# SSH agent protocol
sha2 = { version = "0.10", default-features = false, features = ["std"] }
base64ct = { version = "1", default-features = false, features = ["std"] }

# Unix primitives
nix = { version = "0.29", default-features = false, features = ["fs", "net"] }
libc = "0.2"

# Config deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
